fix(style) file names that conatains Chinese characters breaks the line

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,10 @@ body, pre, code {
     list-style-type: none;
 }
 
+.files li {
+    overflow: hidden;
+}
+
 a {
   text-decoration:none;
 }
